Added the dataset to the Github directory
Added the dataset to the Github directory

--- a/AH2179 final project group 4.ipynb
+++ b/AH2179 final project group 4.ipynb
@@ -585,7 +585,7 @@
    "id": "6fa252e3",
    "metadata": {},
    "source": [
-    "The next step is to get more insights in the data in the data in each column. In the first following cell we will find basic summary statistics of each column in DataFrame. For the sake of readibility of teh results, df.descirbe() function is split up in two cells. The cells afterwards, we will zoom in on specific columns:"
+    "The next step is to get more insights in the data in each column. In the first following cell we will find basic summary statistics of each column in DataFrame. For the sake of readibility of the results, df.descirbe() function is split up in two cells. The cells afterwards, we will zoom in on specific columns:"
    ]
   },
   {
